Fix fn compilation